--- a/src/main/resources/template.vm
+++ b/src/main/resources/template.vm
@@ -21,7 +21,7 @@
   
   <resources>
   	<j2se version="1.7+" initial-heap-size="512m" max-heap-size="512m"/>
-    <jar href="lib/MVideo-0.0.1-SNAPSHOT.jar" main="true"/>
+    <jar href="lib/ILook-0.0.1-SNAPSHOT.jar" main="true"/>
     <jar href="lib/webcam-capture-0.3.10.jar"/>
     <jar href="lib/bridj-0.6.2.jar"/>
     <jar href="lib/slf4j-api-1.7.2.jar"/>
